Changes for 1.3.7
   Export Selected (geometry, joints, points, and textures)
   Set exact position of rotate point for rotate tool
   Report error if saving MD2 or MD3 with faces that are not assigned
      to a group
   Performance fixes for normal calculation (about 40% speed improvement)
   Fix to dissallow primitives additions using subdivide or addPoint
   Added --enable-profile to ./configure
   Added --language to override the system locale
   Prevent select connected from selecting hidden faces
   Do not perform selection in frame animation mode if there are no
      animations
   Changed poly tool's "Fan" checkbox into a Strip/Fan combo box

Changes for 1.3.6
   Save/restore window size
   Include projection in frame all/selected command
   Open projection window from group and projection properties panels
   Allow multiple multiple bone joints for MS3D (subversions 1 and 2)
   Initial Cal3D support
   Better MD3_PATH handling
      Get MD3_PATH from shaders as well as model header
      Allow separate MD3_PATH for each shader
   Corrected capitalization for "Normals Face Out" command
   Split keyboard shortcut for flip front/back (backslash) view
      and flip ortho/persp (backtick)
   Added "Delete" button to animation model panel
   Redraw animation when loop is enabled/disabled (affects interpolation)
   Replaced lex/yacc code with custom preferences parser
      lex/yacc parser was having parse failures on some archs
   Allow MD2 texture coordinates to go outside of 0.0 to 1.0 range
   Report error if MD2 has more than one assigned material
   Remove trailing underscore on MD2 animation names
   Updated configuration for newer autoconf (2.61) and automake (1.9)
   Remember last skeletal/frame selection for new animation window
   Stop playing animation when a new animation is added.
   Error message when attempting to paste animation frame of wrong type
   Fixed bug where an influences with a weight of 0 has no influence, rather