@@ -2074,12 +2074,12 @@ void Model::setNoAnimation()
       m_vertices[ v ]->m_drawSource = m_vertices[v]->m_coord;
    }
 
-      unsigned pcount = m_points.size();
-      for ( unsigned p = 0; p < pcount; p++ )
-      {
-         m_points[ p ]->m_drawSource = m_points[p]->m_trans;
-         m_points[ p ]->m_rotSource  = m_points[p]->m_rot;
-      }
+   unsigned pcount = m_points.size();
+   for ( unsigned p = 0; p < pcount; p++ )
+   {
+      m_points[ p ]->m_drawSource = m_points[p]->m_trans;
+      m_points[ p ]->m_rotSource  = m_points[p]->m_rot;
+   }
 
    unsigned tcount = m_triangles.size();
    for ( unsigned t = 0; t < tcount; t++ )
@@ -2132,37 +2132,6 @@ void Model::setupJoints()
 //            joint->m_localRotation[0], joint->m_localRotation[1], joint->m_localRotation[2] );
 //      log_debug( "\n" );
    }
-
-   /*
-   for ( unsigned p = 0; p < m_points.size(); p++ )
-   {
-      Point * point = m_points[p];
-      double trans[4] = { point->m_trans[0], point->m_trans[1], point->m_trans[2], 1.0 };
-      double rot[3]   = { point->m_rot[0], point->m_rot[1], point->m_rot[2] };
-
-      if ( point->m_boneId >= 0 )
-      {
-         log_debug( "point absolute point position for %d is %f,%f,%f \n",
-                 p, trans[0], trans[1], trans[2] );
-         Matrix minv = m_joints[ point->m_boneId ]->m_final.getInverse();
-         minv.apply( trans );
-         log_debug( "point relative point position for %d is %f,%f,%f \n",
-                 p, trans[0], trans[1], trans[2] );
-         Matrix mr;
-         mr.setRotation( rot );
-         mr = mr * minv;
-         mr.getRotation( rot );
-      }
-
-      for ( int t = 0; t < 3; t++ )
-      {
-         point->m_localTranslation[t] = trans[t];
-         point->m_localRotation[t]    = rot[t];
-      }
-      log_debug( "point final relative point position for %d is %f,%f,%f \n",
-              p, point->m_localTranslation[0], point->m_localTranslation[1], point->m_localTranslation[2] );
-   }
-   */
 }
 
 unsigned Model::getAnimCount( AnimationModeE m ) const
