@@ -1,9 +1,11 @@
 Changes for 1.3.7
+   Added "Apply to selected" for Transform Model
    Export Selected (geometry, joints, points, and textures)
    Set exact position of rotate point for rotate tool
    Report error if saving MD2 or MD3 with faces that are not assigned
       to a group
    Performance fixes for normal calculation (about 40% speed improvement)
+   Performance fixes for MD3 loading (about 8x speed improvement)
    Fix to dissallow primitives additions using subdivide or addPoint
    Added --enable-profile to ./configure
    Added --language to override the system locale
